# actix_htmx_plotly

./: .gitignore  Cargo.toml  README.md  texts.txt
src/: main.rs  out.html  plot.html
static/: index.html  plot.html  plot_div.html  plotly.txt
