[package]
name = "axum-plotly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde", "rustc-serialize"]}
plotly = { version = "0.8.3", features = ["wasm"] }
maud = { version = "0.25.0", features = ["actix-web"] }
openssl = "0.10.52"
actix-files = "0.6.2"
rayon = "1.7.0"



